--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@babel/core": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "autoprefixer": "^9.1.3",
+    "axios": "^0.18.0",
     "babel-loader": "^8.0.0",
     "bulma": "^0.7.1",
     "css-loader": "^1.0.0",
