--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "aos": "^3.0.0-beta.5",
+    "inputmask": "^4.0.2",
     "optimize-css-assets-webpack-plugin": "^5.0.1"
   }
 }
